WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16369
REGRESSION (
r28525
): regular expression tests failing due to bad firstByte optimization
https://bugs.webkit.org/show_bug.cgi?id=16369
Summary
REGRESSION (r28525): regular expression tests failing due to bad firstByte op...
Darin Adler
Reported
2007-12-09 13:23:12 PST
Some of the PCRE regular expression tests started failing due to my breaking the firstByte optimization. I have a fix.
Attachments
patch
(19.42 KB, patch)
2007-12-09 13:30 PST
,
Darin Adler
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2007-12-09 13:30:58 PST
Created
attachment 17807
[details]
patch
Sam Weinig
Comment 2
2007-12-09 22:17:57 PST
Comment on
attachment 17807
[details]
patch This looks good. I am not sure if this and similar code near it needs to be quite as obfuscated as it is? + if ((cd.needOuterBracket ? bracketIsAnchored : branchIsAnchored)(codestart)) I think it would read clearer if it was just + if ((cd.needOuterBracket ? bracketIsAnchored(codestart) : branchIsAnchored(codestart)) Also, I know it is partially copied, but the ... in this comment doesn't seem necessary to me. +.... except when the .* appears inside capturing parentheses, and there is a r=me.
Darin Adler
Comment 3
2007-12-09 22:22:22 PST
Committed revision 28578.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug