JavaScriptCore/pcre/pcre_compile.cpp
@@ -137,21 +137,23 @@ struct CompileData {
         start_code = 0;
         start_pattern = 0;
         top_backref = 0;
-        backref_map = 0;
+        backrefMap = 0;
         req_varyopt = 0;
         needOuterBracket = false;
     }
     const uschar* start_code;   /* The start of the compiled code */
     const UChar* start_pattern; /* The start of the pattern */
     int top_backref;            /* Maximum back reference */
-    unsigned backref_map;       /* Bitmap of low back refs */
+    unsigned backrefMap;       /* Bitmap of low back refs */
     int req_varyopt;            /* "After variable item" flag for reqbyte */
     bool needOuterBracket;
 };
 
-/* Definition to allow mutual recursion */
+/* Definitions to allow mutual recursion */
 
-static bool compile_bracket(int, int*, uschar**, const UChar**, const UChar*, ErrorCode*, int, int*, int*, CompileData&);
+static bool compileBracket(int, int*, uschar**, const UChar**, const UChar*, ErrorCode*, int, int*, int*, CompileData&);
+static bool bracketIsAnchored(const uschar* code);
+static bool bracketNeedsLineStart(const uschar* code, unsigned captureMap, unsigned backrefMap);
 
 /*************************************************
 *            Handle escapes                      *
@@ -278,7 +280,7 @@ static int check_escape(const UChar** ptrptr, const UChar* patternEnd, ErrorCode
                 int cc = ptr[i];
                 if (cc >= 'a')
                     cc -= 32;             /* Convert to upper case */
-                c = c * 16 + cc - ((cc < 'A')? '0' : ('A' - 10));
+                c = c * 16 + cc - ((cc < 'A') ? '0' : ('A' - 10));
             }
             ptr += i - 1;
             break;
@@ -750,7 +752,7 @@ static inline bool safelyCheckNextChar(const UChar* ptr, const UChar* patternEnd
 }
 
 static bool
-compile_branch(int options, int* brackets, uschar** codeptr,
+compileBranch(int options, int* brackets, uschar** codeptr,
                const UChar** ptrptr, const UChar* patternEnd, ErrorCode* errorcodeptr, int *firstbyteptr,
                int* reqbyteptr, CompileData& cd)
 {
@@ -1256,7 +1258,7 @@ compile_branch(int options, int* brackets, uschar** codeptr,
                 
                 /* Remember whether this is a variable length repeat */
                 
-                reqvary = (repeat_min == repeat_max)? 0 : REQ_VARY;
+                reqvary = (repeat_min == repeat_max) ? 0 : REQ_VARY;
                 
                 op_type = 0;                    /* Default single-char op codes */
                 
@@ -1688,7 +1690,7 @@ compile_branch(int options, int* brackets, uschar** codeptr,
                 tempcode = code;
                 tempreqvary = cd.req_varyopt;     /* Save value before bracket */
                 
-                if (!compile_bracket(
+                if (!compileBracket(
                                    options,
                                    brackets,                     /* Extracting bracket count */
                                    &tempcode,                    /* Where to put code (updated) */
@@ -1810,7 +1812,7 @@ compile_branch(int options, int* brackets, uschar** codeptr,
                      value */
                     
                     else {
-                        previous = (-c > ESC_b && -c <= ESC_w)? code : NULL;
+                        previous = (-c > ESC_b && -c <= ESC_w) ? code : NULL;
                         *code++ = -c;
                     }
                     continue;
@@ -1920,7 +1922,7 @@ Returns:      true on success
 */
 
 static bool
-compile_bracket(int options, int* brackets, uschar** codeptr,
+compileBracket(int options, int* brackets, uschar** codeptr,
     const UChar** ptrptr, const UChar* patternEnd, ErrorCode* errorcodeptr, int skipbytes,
     int* firstbyteptr, int* reqbyteptr, CompileData& cd)
 {
@@ -1943,7 +1945,7 @@ compile_bracket(int options, int* brackets, uschar** codeptr,
         
         int branchfirstbyte = REQ_UNSET;
         int branchreqbyte = REQ_UNSET;
-        if (!compile_branch(options, brackets, &code, &ptr, patternEnd, errorcodeptr,
+        if (!compileBranch(options, brackets, &code, &ptr, patternEnd, errorcodeptr,
                             &branchfirstbyte, &branchreqbyte, cd)) {
             *ptrptr = ptr;
             return false;
@@ -2040,70 +2042,40 @@ compile_bracket(int options, int* brackets, uschar** codeptr,
 *************************************************/
 
 /* Try to find out if this is an anchored regular expression. Consider each
-alternative branch. If they all start with OP_SOD or OP_CIRC, or with a bracket
-all of whose alternatives start with OP_SOD or OP_CIRC (recurse ad lib), then
-it's anchored. However, if this is a multiline pattern, then only OP_SOD
-counts, since OP_CIRC can match in the middle.
-
-We can also consider a regex to be anchored if OP_SOM starts all its branches.
-This is the code for \G, which means "match at start of match position, taking
-into account the match offset".
-
-A branch is also implicitly anchored if it starts with .* and DOTALL is set,
-because that will try the rest of the pattern at all possible matching points,
-so there is no point trying again.... er ....
-
-.... except when the .* appears inside capturing parentheses, and there is a
-subsequent back reference to those parentheses. We haven't enough information
-to catch that case precisely.
-
-At first, the best we could do was to detect when .* was in capturing brackets
-and the highest back reference was greater than or equal to that level.
-However, by keeping a bitmap of the first 31 back references, we can catch some
-of the more common cases more precisely.
+alternative branch. If they all start OP_CIRC, or with a bracket
+all of whose alternatives start OP_CIRC (recurse ad lib), then
+it's anchored.
 
 Arguments:
-  code           points to start of expression (the bracket)
-  options        points to the options setting
-  bracket_map    a bitmap of which brackets we are inside while testing; this
-                  handles up to substring 31; after that we just have to take
-                  the less precise approach
-  backref_map    the back reference bitmap
-
-Returns:     true or false
+  code          points to start of expression (the bracket)
+  captureMap    a bitmap of which brackets we are inside while testing; this
+                 handles up to substring 31; all brackets after that share
+                 the zero bit
+  backrefMap    the back reference bitmap
 */
 
-static bool is_anchored(const uschar* code, int options, unsigned bracket_map, unsigned backref_map)
+static bool branchIsAnchored(const uschar* code)
+{
+    const uschar* scode = firstSignificantOpCode(code);
+    int op = *scode;
+
+    /* Brackets */
+    if (op >= OP_BRA || op == OP_ASSERT || op == OP_ONCE)
+        return bracketIsAnchored(scode);
+
+    /* Check for explicit anchoring */    
+    return op == OP_CIRC;
+}
+
+static bool bracketIsAnchored(const uschar* code)
 {
     do {
-        const uschar* scode = firstSignificantOpCode(code + 1 + LINK_SIZE);
-        int op = *scode;
-        
-        /* Capturing brackets */
-        if (op > OP_BRA) {
-            op -= OP_BRA;
-            if (op > EXTRACT_BASIC_MAX)
-                op = get2ByteOpcodeValueAtOffset(scode, 2 + LINK_SIZE);
-            int new_map = bracket_map | ((op < 32)? (1 << op) : 1);
-            if (!is_anchored(scode, options, new_map, backref_map))
-                return false;
-        }
-        
-        /* Other brackets */
-        else if (op == OP_BRA || op == OP_ASSERT || op == OP_ONCE) {
-            if (!is_anchored(scode, options, bracket_map, backref_map))
-                return false;
-        
-        /* Check for explicit anchoring */
-        
-        } else if ((options & MatchAcrossMultipleLinesOption) || op != OP_CIRC)
+        if (!branchIsAnchored(code + 1 + LINK_SIZE))
             return false;
         code += getOpcodeValueAtOffset(code, 1);
     } while (*code == OP_ALT);   /* Loop for each alternative */
     return true;
 }
-
-
 
 /*************************************************
 *         Check for starting with ^ or .*        *
@@ -2112,55 +2084,58 @@ static bool is_anchored(const uschar* code, int options, unsigned bracket_map, u
 /* This is called to find out if every branch starts with ^ or .* so that
 "first char" processing can be done to speed things up in multiline
 matching and for non-DOTALL patterns that start with .* (which must start at
-the beginning or after \n). As in the case of is_anchored() (see above), we
-have to take account of back references to capturing brackets that contain .*
-because in that case we can't make the assumption.
+the beginning or after \n)
+
+Except when the .* appears inside capturing parentheses, and there is a
+subsequent back reference to those parentheses. By keeping a bitmap of the
+first 31 back references, we can catch some of the more common cases more
+precisely; all the greater back references share a single bit.
 
 Arguments:
-  code           points to start of expression (the bracket)
-  bracket_map    a bitmap of which brackets we are inside while testing; this
-                  handles up to substring 31; after that we just have to take
-                  the less precise approach
-  backref_map    the back reference bitmap
+  code          points to start of expression (the bracket)
+  captureMap    a bitmap of which brackets we are inside while testing; this
+                 handles up to substring 31; all brackets after that share
+                 the zero bit
+  backrefMap    the back reference bitmap
 */
 
-static bool canApplyFirstCharOptimization(const uschar* code, unsigned bracket_map, unsigned backref_map)
+static bool branchNeedsLineStart(const uschar* code, unsigned captureMap, unsigned backrefMap)
+{
+    const uschar* scode = firstSignificantOpCode(code);
+    int op = *scode;
+    
+    /* Capturing brackets */
+    if (op > OP_BRA) {
+        int captureNum = op - OP_BRA;
+        if (captureNum > EXTRACT_BASIC_MAX)
+            captureNum = get2ByteOpcodeValueAtOffset(scode, 2 + LINK_SIZE);
+        int bracketMask = (captureNum < 32) ? (1 << captureNum) : 1;
+        return bracketNeedsLineStart(scode, captureMap | bracketMask, backrefMap);
+    }
+    
+    /* Other brackets */
+    if (op == OP_BRA || op == OP_ASSERT || op == OP_ONCE)
+        return bracketNeedsLineStart(scode, captureMap, backrefMap);
+    
+    /* .* means "start at start or after \n" if it isn't in brackets that
+     may be referenced. */
+    
+    if (op == OP_TYPESTAR || op == OP_TYPEMINSTAR)
+        return scode[1] == OP_NOT_NEWLINE && !(captureMap & backrefMap);
+
+    /* Explicit ^ */
+    return op == OP_CIRC;
+}
+
+static bool bracketNeedsLineStart(const uschar* code, unsigned captureMap, unsigned backrefMap)
 {
     do {
-        const uschar* scode = firstSignificantOpCode(code + 1 + LINK_SIZE);
-        int op = *scode;
-        
-        /* Capturing brackets */
-        if (op > OP_BRA) {
-            op -= OP_BRA;
-            if (op > EXTRACT_BASIC_MAX)
-                op = get2ByteOpcodeValueAtOffset(scode, 2+LINK_SIZE);
-            int new_map = bracket_map | ((op < 32)? (1 << op) : 1);
-            if (!canApplyFirstCharOptimization(scode, new_map, backref_map))
-                return false;
-        }
-        
-        /* Other brackets */
-        else if (op == OP_BRA || op == OP_ASSERT || op == OP_ONCE) {
-            if (!canApplyFirstCharOptimization(scode, bracket_map, backref_map))
-                return false;
-        
-        /* .* means "start at start or after \n" if it isn't in brackets that
-         may be referenced. */
-        
-        } else if (op == OP_TYPESTAR || op == OP_TYPEMINSTAR) {
-            if (scode[1] != OP_NOT_NEWLINE || (bracket_map & backref_map))
-                return false;
-        } else if (op != OP_CIRC) /* Check for explicit circumflex */
+        if (!branchNeedsLineStart(code + 1 + LINK_SIZE, captureMap, backrefMap))
             return false;
-        
-        /* Move on to the next alternative */
-        
         code += getOpcodeValueAtOffset(code, 1);
     } while (*code == OP_ALT);  /* Loop for each alternative */
     return true;
 }
-
 
 /*************************************************
 *       Check for asserted fixed first char      *
@@ -2296,7 +2271,7 @@ static int calculateCompiledPatternLengthAndFlags(const UChar* pattern, int patt
                 
                 if (c <= -ESC_REF) {
                     int refnum = -c - ESC_REF;
-                    cd.backref_map |= (refnum < 32)? (1 << refnum) : 1;
+                    cd.backrefMap |= (refnum < 32) ? (1 << refnum) : 1;
                     if (refnum > cd.top_backref)
                         cd.top_backref = refnum;
                     length += 2;   /* For single back reference */
@@ -2352,7 +2327,7 @@ static int calculateCompiledPatternLengthAndFlags(const UChar* pattern, int patt
                         if (minRepeats > 0)
                             length += 3 + lastitemlength;
                     }
-                    length += lastitemlength + ((maxRepeats > 0)? 3 : 1);
+                    length += lastitemlength + ((maxRepeats > 0) ? 3 : 1);
                 }
                 
                 if (safelyCheckNextChar(ptr, patternEnd, '?'))
@@ -2497,7 +2472,7 @@ static int calculateCompiledPatternLengthAndFlags(const UChar* pattern, int patt
                                         /* An extra item is needed */
                                         
                                         length += 1 + _pcre_ord2utf8(occ, buffer) +
-                                        ((occ == ocd)? 0 : _pcre_ord2utf8(ocd, buffer));
+                                        ((occ == ocd) ? 0 : _pcre_ord2utf8(ocd, buffer));
                                     }
                                 }
                                 
@@ -2786,8 +2761,8 @@ JSRegExp* jsRegExpCompile(const UChar* pattern, int patternLength,
     /* The starting points of the name/number translation table and of the code are
      passed around in the compile data block. */
     
-    const uschar* codestart = (const uschar*)(re + 1);
-    cd.start_code = codestart;
+    const uschar* codeStart = (const uschar*)(re + 1);
+    cd.start_code = codeStart;
     cd.start_pattern = (const UChar*)pattern;
     
     /* Set up a starting, non-extracting bracket, then compile the expression. On
@@ -2796,14 +2771,14 @@ JSRegExp* jsRegExpCompile(const UChar* pattern, int patternLength,
     
     const UChar* ptr = (const UChar*)pattern;
     const UChar* patternEnd = pattern + patternLength;
-    uschar* code = (uschar*)codestart;
+    uschar* code = (uschar*)codeStart;
     int firstbyte, reqbyte;
     int bracketCount = 0;
     if (!cd.needOuterBracket)
-        compile_branch(re->options, &bracketCount, &code, &ptr, patternEnd, &errorcode, &firstbyte, &reqbyte, cd);
+        compileBranch(re->options, &bracketCount, &code, &ptr, patternEnd, &errorcode, &firstbyte, &reqbyte, cd);
     else {
         *code = OP_BRA;
-        compile_bracket(re->options, &bracketCount, &code, &ptr, patternEnd, &errorcode, 0, &firstbyte, &reqbyte, cd);
+        compileBracket(re->options, &bracketCount, &code, &ptr, patternEnd, &errorcode, 0, &firstbyte, &reqbyte, cd);
     }
     re->top_bracket = bracketCount;
     re->top_backref = cd.top_backref;
@@ -2818,8 +2793,8 @@ JSRegExp* jsRegExpCompile(const UChar* pattern, int patternLength,
     
     *code++ = OP_END;
 
-    ASSERT(code - codestart <= length);
-    if (code - codestart > length)
+    ASSERT(code - codeStart <= length);
+    if (code - codeStart > length)
         errorcode = ERR7;
     
     /* Give an error if there's back reference to a non-existent capturing
@@ -2845,21 +2820,21 @@ JSRegExp* jsRegExpCompile(const UChar* pattern, int patternLength,
      start with ^. and also when all branches start with .* for non-DOTALL matches.
      */
     
-    if (is_anchored(codestart, re->options, 0, cd.backref_map))
+    if (cd.needOuterBracket ? bracketIsAnchored(codeStart) : branchIsAnchored(codeStart))
         re->options |= IsAnchoredOption;
     else {
         if (firstbyte < 0)
-            firstbyte = find_firstassertedchar(codestart, re->options, false);
-        if (firstbyte >= 0)   /* Remove caseless flag for non-caseable chars */
-        {
+            firstbyte = find_firstassertedchar(codeStart, re->options, false);
+        if (firstbyte >= 0) {
             int ch = firstbyte & 255;
             if (ch < 127) {
                 re->first_byte = ((firstbyte & REQ_IGNORE_CASE) && flipCase(ch) == ch) ? ch : firstbyte;
                 re->options |= UseFirstByteOptimizationOption;
             }
+        } else {
+            if (cd.needOuterBracket ? bracketNeedsLineStart(codeStart, 0, cd.backrefMap) : branchNeedsLineStart(codeStart, 0, cd.backrefMap))
+                re->options |= UseMultiLineFirstByteOptimizationOption;
         }
-        else if (canApplyFirstCharOptimization(codestart, 0, cd.backref_map))
-            re->options |= UseMultiLineFirstByteOptimizationOption;
     }
     
     /* For an anchored pattern, we use the "required byte" only if it follows a
