JavaScriptCore/pcre/pcre_exec.cpp
@@ -419,7 +419,7 @@ static int match(const UChar* subjectPtr, const uschar* instructionPtr, int offs
     /* One-time setup of the opcode jump table. */
 #ifdef USE_COMPUTED_GOTO_FOR_MATCH_OPCODE_LOOP
     for (int i = 255; !opcode_jump_table[i]; i--)
-            opcode_jump_table[i] = &&CAPTURING_BRACKET;
+        opcode_jump_table[i] = &&CAPTURING_BRACKET;
 #endif
     
 #ifdef USE_COMPUTED_GOTO_FOR_MATCH_RECURSION
@@ -2077,12 +2077,8 @@ int jsRegExpExecute(const JSRegExp* re,
         
         int returnCode = match(start_match, start_code, 2, match_block);
         
-        /* When the result is no match, if the subject's first character was a
-         newline and the PCRE_FIRSTLINE option is set, break (which will return
-         PCRE_ERROR_NOMATCH). The option requests that a match occur before the first
-         newline in the subject. Otherwise, advance the pointer to the next character
-         and continue - but the continuation will actually happen only when the
-         pattern is not anchored. */
+        /* When the result is no match, advance the pointer to the next character
+         and continue. */
         
         if (returnCode == MATCH_NOMATCH) {
             start_match++;
